Bug 87574 - Outline numbering "None" is not retained when save as docx
Summary: Outline numbering "None" is not retained when save as docx
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta2
Hardware: Other All
: medium normal
Assignee: Mark Hung
URL:
Whiteboard: target:4.5.0 target:4.4.5
Keywords: bibisected, bisected, regression
: 90940 91242 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-12-22 04:19 UTC by Kevin Suo
Modified: 2015-12-17 08:42 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
test odt file (8.84 KB, application/vnd.oasis.opendocument.text)
2014-12-22 04:19 UTC, Kevin Suo
Details
saved docx file (5.02 KB, application/vnd.openxmlformats-officedocument.wordprocessingml)
2014-12-22 04:20 UTC, Kevin Suo
Details
screenshot (235.42 KB, image/png)
2014-12-22 04:26 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2014-12-22 04:19:50 UTC
Created attachment 111140 [details]
test odt file

The attached ODT file has the following settings:
Tools - Outline Numbering - Level 1: Number: None.

When save as DOCX and reopen, numburing "1,2,..." are added to the begigging of each Heading 1.
Comment 1 Kevin Suo 2014-12-22 04:20:25 UTC
Created attachment 111141 [details]
saved docx file
Comment 2 Kevin Suo 2014-12-22 04:26:02 UTC
Created attachment 111142 [details]
screenshot

Reproduced with the following version:
Version: 4.4.0.0.beta2
Build ID: be92f32b8f21603a6b7a75dd645f7475bdee519d
Locale: zh_CN

Do not reproduce with
Version: 4.3.5.2
Build ID: 3a87456aaa6a95c63eea1c1b3201acedf0751bd5
Possible regression
Comment 3 sophie 2014-12-24 14:19:08 UTC
Hi Kevin, confirmed with Version: 4.4.0.1
Build ID: 1ba9640ddd424f1f535c75bf2b86703770b8cf6f
Locale: fr_FR Ubuntu 14.10 - Set as new - Sophie
Comment 4 Michael Weghorn 2015-01-18 00:50:58 UTC
bibisect result:
 87ba50d78ca8bf8abac4254a05264dd8df6aa1fe is the first bad commit
commit 87ba50d78ca8bf8abac4254a05264dd8df6aa1fe
Author: Robinson Tryon <qubit@runcibility.com>
Date:   Tue Dec 2 04:04:16 2014 +0100

    source-hash-fe076b977661679842d44ecf21a66fca4d96ce33
    
    commit fe076b977661679842d44ecf21a66fca4d96ce33
    Author:     Norbert Thiebaud <nthiebaud@gmail.com>
    AuthorDate: Fri Nov 7 19:48:19 2014 -0600
    Commit:     Norbert Thiebaud <nthiebaud@gmail.com>
    CommitDate: Fri Nov 7 19:48:19 2014 -0600
    
        sc, opencl dependant code called even without FEATURE_OPENCL
    
        Change-Id: I9629904b6b48d6b8356d6abb0c3cffe6e3fba517

--

# bad: [4a3091e95fa263d3e2dd81e56e83996f0bb12287] source-hash-2b5b04e1e62914bf0902dfd7943cdc44499c47a6
# good: [812c4a492375ac47b3557fbb32f5637fc89d60d9] source-hash-dea4a3b9d7182700abeb4dc756a24a9e8dea8474
git bisect start 'latest' 'oldest'
# good: [5d0dfb8e62ae61a240f8313c594d4560e7c8e048] source-hash-0c6cd530de13f80795881f61064f1bf1dcc4ea81
git bisect good 5d0dfb8e62ae61a240f8313c594d4560e7c8e048
# good: [7dfacd0b8bd828331d74c0f79de6e8924bc4e6a5] source-hash-f93ce4f7eb90093d0ea3115d0a1c614612676dbd
git bisect good 7dfacd0b8bd828331d74c0f79de6e8924bc4e6a5
# good: [a42da134cd542144fca7ba14cce86c2b409fc18a] source-hash-beadebc0f7eb5582fcb8dcb082d19afdf2751876
git bisect good a42da134cd542144fca7ba14cce86c2b409fc18a
# good: [038f586bf711ad77856916be954b6c02a5717eb1] source-hash-2ec4c8b07427af868e32e14aaefd20649c1135d6
git bisect good 038f586bf711ad77856916be954b6c02a5717eb1
# bad: [1c1bb47aa932531a0486c1af5460f7f7f3de510a] source-hash-16068663e2aa984388be5f774b8f1917c12bf6f3
git bisect bad 1c1bb47aa932531a0486c1af5460f7f7f3de510a
# good: [9b5a9b4c08f5ff98dea45778e8b0108456ae2afa] source-hash-b800d0b6ad74ce4a9adb23b865dd174d1eefa47b
git bisect good 9b5a9b4c08f5ff98dea45778e8b0108456ae2afa
# bad: [87ba50d78ca8bf8abac4254a05264dd8df6aa1fe] source-hash-fe076b977661679842d44ecf21a66fca4d96ce33
git bisect bad 87ba50d78ca8bf8abac4254a05264dd8df6aa1fe
# good: [44b035cbec37614034a66b5617313d237faa83f7] source-hash-b2503f187341f9a37737f34c7fc6a02d03c2e84e
git bisect good 44b035cbec37614034a66b5617313d237faa83f7
# first bad commit: [87ba50d78ca8bf8abac4254a05264dd8df6aa1fe] source-hash-fe076b977661679842d44ecf21a66fca4d96ce33
Comment 5 Matthew Francis 2015-01-24 01:55:32 UTC
The behaviour seems to have changed as of the below commit.


commit d30a8ec448bcd08c6a52a37d6ae41a4b71c235da
Author: Mark Hung <marklh9@gmail.com>
Date:   Tue Nov 4 05:31:53 2014 -0800

    Correct number format mapping for CJK numbered lists in rtf/doc/docx filters.
    
    Reviewed on:
        https://gerrit.libreoffice.org/12252
    
    Change-Id: I2d8760c7ecb3677464e167528b2424aaca19a0d7
Comment 7 Andras Timar 2015-06-08 05:23:23 UTC
*** Bug 90940 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2015-06-08 05:32:14 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7f605eb84c2b647a87b9bd96ca91c3170b3c84e6&h=libreoffice-4-4

tdf#87574 - Outline numbering "None" is not retained in docx

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Andras Timar 2015-06-18 17:53:08 UTC
*** Bug 91242 has been marked as a duplicate of this bug. ***
Comment 10 Robinson Tryon (qubit) 2015-12-17 08:42:19 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]