tdf#87574 - Outline numbering "None" is not retained in docx

Partially revert commit d30a8ec448bcd08c6a52a37d6ae41a4b71c235da
(Correct number format mapping for CJK numbered lists in rtf/doc/docx
filters., 2014-11-04).

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/14211

Change-Id: I0876ecd982cfd8d97887495b23af0e0370821101